# docsally

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/logic/: db_embedding.rs  entry.rs  mod.rs  ollama_embeddings.rs  pdf_extract.rs
src-tauri/src/utils/: check_nomic.rs  check_system.rs  cli_type_specification.rs  install_nomic_embed_text.rs  mod.rs  ollama_list.rs
src/components/: chatBox.jsx  chatResponse.jsx  chatSection.jsx  currentChats.jsx  documentExport.jsx  documentSection.jsx  optionsSection.jsx  upperSection.jsx
src/util/: NomicEmbedStates.js  checkNomicEmbedText.js  checkSystem.js  installNomicEmbedText.js  osSpecificStyle.js
