[package]
name = "docsally"
version = "0.1.0"
description = "An Ai document reader"
authors = ["hish22"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docsally_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
langchain-rust = { git = "https://github.com/Abraxas-365/langchain-rust", features = [
    "surrealdb",
] }
pdf-extract = "0.9.0"
ollama-rs = "0.3.1"
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
# sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
surrealdb = { version = "2.3.5", features = ["kv-mem"] }
futures = "0.3.31"
os_info = "3.12.0"
tauri-plugin-process = "2"
# pdfium-render = { version = "0.8.33", features = ["pdfium-bundled"] }
# tokio-tungstenite = "0.27.0"
# rusqlite = "0.36.0"

[dependencies.pdfium-render]
version = "0.8.33"
